# billiard

./: Cargo.toml
.cargo/: config.toml
src/: ball.rs  camera.rs  config.rs  definately_not_main.rs  light.rs  main.rs  walls.rs
src/stuff/: input.rs
src/things/: lower_white.rs  mod.rs  upper_red.rs
