[package]
name = "wtf"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking"] }
avian3d = "0.4"
# bevy_enhanced_input = "0.20"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
